2007-06-22 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/*.[ch]:
	* libempathy-gtk/*.[ch]:
	* src/*.[ch]: Rename all filenames starting with "gossip" by "empathy",
	change namespace of all gossip_*() functions to empathy_*().
	Fixes bug #444490 (Mario Danic, Xavier Claessens).

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.9

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Fix typo causing warnings.

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/gossip-contact-list-store.c:
	* libempathy-gtk/gossip-contact-list-view.c:
	* libempathy/empathy-contact-manager.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/empathy-contact-list.c:
	* libempathy/empathy-contact-list.h:
	* libempathy/gossip-contact.c: We show in our roster all contacts
	members and remote-pending of subscribe list. Adding/Removing a contact
	only add/remove from subscribe list. Accept/Reject a contact in
	local-pending of publish list is done using _process_pending().

2007-06-15 Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c:
	* libempathy/empathy-idle.c: Adding NetworkManager support.

2007-06-15 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/gossip-presence-chooser.c:
	* libempathy-gtk/gossip-presence-chooser.h:
	* libempathy/empathy-idle.c:
	* libempathy/empathy-idle.h: Prepare for slack time when coming back
	from auto away. Not yet fully implemented.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/gossip-chat.c: Use gtk-info for contact informaiton.

	* data/22x22/empathy-proto-salut.png:
	* data/22x22/Makefile.am:
	* data/16x16/empathy-proto-salut.png:
	* data/16x16/Makefile.am:
	* data/scalable/empathy-proto-salut.svg:
	* data/scalable/Makefile.am: