@@ -7,43 +7,43 @@ data/empathy.desktop.in.in
 data/empathy.schemas.in
 
 libempathy/empathy-idle.c
-libempathy/gossip-contact.c
-libempathy/gossip-presence.c
+libempathy/empathy-contact.c
+libempathy/empathy-presence.c
 
+libempathy-gtk/empathy-about-dialog.c
+libempathy-gtk/empathy-account-chooser.c
+libempathy-gtk/empathy-account-widget-generic.c
+libempathy-gtk/empathy-account-widget-jabber.glade
+libempathy-gtk/empathy-accounts-dialog.c
+libempathy-gtk/empathy-accounts-dialog.glade
+libempathy-gtk/empathy-chat.c
+libempathy-gtk/empathy-chat.glade
+libempathy-gtk/empathy-chat-view.c
+libempathy-gtk/empathy-chat-window.c
+libempathy-gtk/empathy-chatrooms-window.c
+libempathy-gtk/empathy-chatrooms-window.glade
 libempathy-gtk/empathy-contact-dialogs.c
 libempathy-gtk/empathy-contact-dialogs.glade
+libempathy-gtk/empathy-contact-list-view.c
 libempathy-gtk/empathy-contact-widget.c
 libempathy-gtk/empathy-contact-widget.glade
+libempathy-gtk/empathy-group-chat.c
+libempathy-gtk/empathy-group-chat.glade
+libempathy-gtk/empathy-log-window.c
+libempathy-gtk/empathy-log-window.glade
+libempathy-gtk/empathy-new-chatroom-dialog.c
+libempathy-gtk/empathy-new-chatroom-dialog.glade
 libempathy-gtk/empathy-main-window.c
 libempathy-gtk/empathy-main-window.glade
+libempathy-gtk/empathy-preferences.c
+libempathy-gtk/empathy-preferences.glade
+libempathy-gtk/empathy-presence-chooser.c
+libempathy-gtk/empathy-presence-chooser.glade
+libempathy-gtk/empathy-private-chat.c
+libempathy-gtk/empathy-spell-dialog.c
+libempathy-gtk/empathy-spell-dialog.glade
 libempathy-gtk/empathy-status-icon.c
 libempathy-gtk/empathy-status-icon.glade
-libempathy-gtk/gossip-about-dialog.c
-libempathy-gtk/gossip-account-chooser.c
-libempathy-gtk/gossip-accounts-dialog.c
-libempathy-gtk/gossip-accounts-dialog.glade
-libempathy-gtk/gossip-account-widget-generic.c
-libempathy-gtk/gossip-account-widget-jabber.glade
-libempathy-gtk/gossip-chat.c
-libempathy-gtk/gossip-chat.glade
-libempathy-gtk/gossip-chat-view.c
-libempathy-gtk/gossip-chat-window.c
-libempathy-gtk/gossip-chatrooms-window.c
-libempathy-gtk/gossip-chatrooms-window.glade
-libempathy-gtk/gossip-contact-list-view.c
-libempathy-gtk/gossip-group-chat.c
-libempathy-gtk/gossip-group-chat.glade
-libempathy-gtk/gossip-log-window.c
-libempathy-gtk/gossip-log-window.glade
-libempathy-gtk/gossip-new-chatroom-dialog.c
-libempathy-gtk/gossip-new-chatroom-dialog.glade
-libempathy-gtk/gossip-preferences.c
-libempathy-gtk/gossip-preferences.glade
-libempathy-gtk/gossip-presence-chooser.c
-libempathy-gtk/gossip-presence-chooser.glade
-libempathy-gtk/gossip-private-chat.c
-libempathy-gtk/gossip-spell-dialog.c
-libempathy-gtk/gossip-spell-dialog.glade
-libempathy-gtk/gossip-theme-manager.c
+libempathy-gtk/empathy-theme-manager.c
 
 src/empathy.c
